objects/CSQ_CounterMeasure__c.object
<CustomObject>
    <description>Related list to Improvement Project</description>
    <fields>
        <fullName>CSQ_CounterMeasureDeliverables__c</fullName>
        <inlineHelpText>The deliverables or what will change as a result of the countermeasure.</inlineHelpText>
        <label>Countermeasure Deliverables</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_CounterMeasureEndDate__c</fullName>
        <label>Countermeasure End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_CounterMeasureOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Countermeasure Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CounterMeasuresOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSQ_CounterMeasureStartDate__c</fullName>
        <label>Countermeasure Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_FollowUpDeliverables__c</fullName>
        <inlineHelpText>Review of the countermeasure performance or additional countermeasures if required</inlineHelpText>
        <label>Follow Up Deliverables</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_FollowUpEndDate__c</fullName>
        <label>Follow Up End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_FollowUpOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow Up Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FollowUpOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSQ_FollowUpStartDate__c</fullName>
        <label>Follow Up Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_ImprovementProject__c</fullName>
        <label>Improvement Project</label>
        <referenceTo>CSQ_ImprovementProject__c</referenceTo>
        <relationshipLabel>Counter Measures</relationshipLabel>
        <relationshipName>CounterMeasures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CountemeasureComments__c</fullName>
        <description>March 2018 release-BFOI2P-835</description>
        <label>Countermeasure Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CountemeasurePercentageCompleted__c</fullName>
        <description>March 2018 release - BFOI2P-835</description>
        <label>Countermeasure Percentage Completed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CountermeasuresDurationinDays__c</fullName>
        <formula>TEXT( CSQ_CounterMeasureEndDate__c- CSQ_CounterMeasureStartDate__c  )</formula>
        <label>Countermeasures Duration in Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpComments__c</fullName>
        <label>Follow Up Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FollowUpDurationinDays__c</fullName>
        <formula>TEXT( CSQ_FollowUpEndDate__c - CSQ_FollowUpStartDate__c )</formula>
        <label>Follow Up Duration in Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpPercentageCompleted__c</fullName>
        <label>Follow Up Percentage Completed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Countermeasure</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>Countermeasure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Countermeasures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>